Fix color contrast errors by darkening the given fonts 5%

--- a/src/main/content/antora_ui/src/sass/nav.scss
+++ b/src/main/content/antora_ui/src/sass/nav.scss
@@ -392,7 +392,7 @@ html.is-clipped--nav {
 .nav-panel-explore .component .version a {
   font-size: 11px;
   font-family: Asap-Medium;
-  color: darken(#5d6a8e, 10%); // Darkened to pass DAP
+  color: darken(#5d6a8e, 5%); // Darkened to pass DAP
   white-space: nowrap;
   display: inline-block;
 }
