--- a/src/main/content/antora_ui/src/sass/openliberty.scss
+++ b/src/main/content/antora_ui/src/sass/openliberty.scss
@@ -404,7 +404,7 @@ footer {
     #footer_project {
         font-weight: 500;
         font-size: 11px;
-        color: #6F7878;
+        color: darken(#6F7878, 5%); // Darkened to pass DAP
         letter-spacing: 0;
         float: left;
         clear: left;
