--- a/src/main/content/antora_ui/src/sass/toolbar.scss
+++ b/src/main/content/antora_ui/src/sass/toolbar.scss
@@ -94,7 +94,7 @@
 }
 
 #open_issue_link, #edit_topic_link {
-  color: #337AC8;
+  color: darken(#337AC8, 5%); // Darkened to pass DAP
   &:hover, &:focus {
     color: #23527c;
   }
